--- a/site/explore_by_zone.css
+++ b/site/explore_by_zone.css
@@ -80,10 +80,14 @@ div.olControlZoom a, div.olControlTextButtonPanel .olButton {
 }
 
 #left-container {
-    height: 92%;
+    height: 100%;
     width: 430px;
     position: absolute;
     z-index: 995;
+    padding-bottom: 41px;
+}
+.well {
+    margin-bottom: 0 !important;
 }
 
 #left-panel {
@@ -97,7 +101,7 @@ div.olControlZoom a, div.olControlTextButtonPanel .olButton {
 }
 
 #map {
-    margin-left: 430px !important;
+    padding-left: 430px !important;
 }
 
 body {
